tests/transform/initialize/initialize_9/sample/output.txt
main.c:8:38: error: Given DeclRefExpr is not a variable
    #pragma spf transform initialize(foo = a)
                                     ^
1 error generated.
Error while processing main.c.
